<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="score_display">Points: </string>
    <string name="shop_warning">"Not enough points</string>
    <string name="Button">x1</string>
    <string name="BetterButton">x5</string>
    <string name="SuperButton">x10</string>
    <string name="MegaButton">x50</string>
    <string name="GigaButton">x100</string>
    <string name="textButton">Button</string>
    <string name="textBetterButton">Better Button</string>
    <string name="textSuperButton">Super Button</string>
    <string name="textMegaButton">Mega Button</string>
    <string name="textGigaButton">Giga Button</string>
    <string name="unlockBetter">Buy Better Button for 25 points</string>
    <string name="unlockSuper">Buy Super Button for 100 points</string>
    <string name="unlockMega">Buy Mega Button for 1000 points</string>
    <string name="unlockGiga">Buy Giga Button for 5000 points</string>
    <string name="shopBttnTxt">shop</string>

</resources>