<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyApplication.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.MyApplication.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="540dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <Button
            android:id="@+id/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:onClick="registerClick"
            android:tag="@string/Button"
            android:text="@string/textButton" />

        <Button
            android:id="@+id/BetterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:enabled="false"
            android:onClick="registerClick"
            android:tag="@string/BetterButton"
            android:text="@string/textBetterButton"
            app:layout_constraintBottom_toTopOf="@+id/tapx5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/SuperButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:enabled="false"
            android:onClick="registerClick"
            android:tag="@string/SuperButton"
            android:text="@string/textSuperButton" />

        <Button
            android:id="@+id/MegaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:enabled="false"
            android:onClick="registerClick"
            android:tag="@string/MegaButton"
            android:text="@string/textMegaButton" />


        <Button
            android:id="@+id/GigaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:enabled="false"
            android:onClick="registerClick"
            android:tag="@string/GigaButton"
            android:text="@string/textGigaButton" />

        <Button
            android:id="@+id/visitShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:onClick="changeScreen"
            android:text="@string/shopBttnTxt" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>